--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,8 @@
 {{ define "main" }}
-<main>
-    {{ .Content }}
+<main class="py-5">
+    <div class="container">
+        <h1>This is {{ .Title }}</h1>
+        {{ .Content }}
+    </div>
 </main>
 {{ end }}
