--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,31 @@
-<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script> -->
+<footer class="footer bg-dark py-3">
+    <div class="container">
+        <div class="d-flex flex-wrap justify-content-between">
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+            </ul>
+            <a class="btn btn-primary" href="#" role="button">Contact us</a>
+        </div>
+        <p class="text-muted px-3"><small>&copy; UNHCR <span id="js-year"></span><noscript>{{ now.Format "2006" }}</noscript></small></p>
+    </div>
+</footer>
+
+<!-- Dynamic copyright date -->
+<script>
+    document.getElementById("js-year").innerHTML = new Date().getFullYear();
+</script>
+
+<!-- Load bootstrap js bundle -->
 {{ $bootstrapJs := resources.Get "/js/bootstrap.bundle.min.js" }}
 <script src="{{ $bootstrapJs.RelPermalink }}"></script>
