--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,24 +1,21 @@
 <footer class="footer bg-dark py-3">
-    <div class="container">
-        <div class="d-flex flex-wrap justify-content-between">
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-            </ul>
-            <a class="btn btn-primary" href="#" role="button">Contact us</a>
-        </div>
-        <p class="text-muted px-3"><small>&copy; UNHCR <span id="js-year"></span><noscript>{{ now.Format "2006" }}</noscript></small></p>
-    </div>
+  <div class="container">
+      <div class="d-flex flex-wrap justify-content-between">
+      <ul class="nav">
+        {{ range .Site.Menus.main }}
+        <li class="nav-item">
+            <a class="nav-link"{{ if $.IsMenuCurrent "main" . }} aria-current="page"{{ end }} href="{{ .URL }}">
+                {{ .Pre }}
+                <span>{{ .Name }}</span>
+            </a>
+        </li>
+    		{{ end }}
+      </ul>
+      <a class="btn btn-primary" href="mailto:ipda@unhcr.org?subject=Mail from Dataviz Platform" role="button">Contact
+          us</a>
+      </div>
+      <p class="text-muted px-3"><small>&copy; UNHCR <span id="js-year"></span><noscript>{{ now.Format "2006" }}</noscript></small></p>
+  </div>
 </footer>
 
 <!-- Dynamic copyright date -->
