--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,6 @@
 {{ define "main" }}
-<main class="py-5">
-    <div class="container">
-        <h1>This is {{ .Title }}</h1>
-        {{ .Content }}
-    </div>
+<main class="py-5 container">
+    <h1>This is {{ .Title }} from index.html layout</h1>
+    {{ .Content }}
 </main>
 {{ end }}
