add general guidance page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main id="home" class="flex-shrink-0">
+<main class="flex-shrink-0">
     <section class="banner py-5">
         <div class="container py-5">
             <div class="row align-items-center gx-5 gy-4">
