--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,25 @@
 {{ define "main" }}
-<main class="py-5 container">
-  <h1>{{ .Title }}</h1>
-  <p class="text-danger">This is a <strong>single</strong> page</p>
-  {{ .Content }}
+<main class="d-flex flex-column min-vh-100 flex-shrink-0">
+  <div class="container my-5">
+    <div class="text-center mb-5">
+      <h2 class="text-uppercase">{{ .Title }}</h2>
+      <hr class="short-hr">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <p>{{ .Params.subtitle }}</p>
+          {{ if .Params.button }}
+          {{ range .Params.button }}
+          <a class="btn btn-primary" href="{{ .link }}"{{ with .download }} download=""  target="_blank"{{ end }}>{{ .linkText }}</a>
+          {{ end }}
+          {{ end }}
+        </div>
+      </div>
+    </div>
+
+    <hr>
+
+    {{ .Content }}
+    
+  </div>
 </main>
 {{ end }}
