add product page and partial for header

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     {{- partial "head" . -}}
   </head>
   <body>
-    {{- partial "header" . -}}
+    {{- partial "navbar" . -}}
     {{- block "main" . }}{{- end }}
     {{- partial "footer" . -}}
   </body>
