--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,10 @@
 {{ define "main" }}
-<main class="py-5 container">
-  <h1>{{ .Title }}</h1>
-  <p class="text-danger">This is a <strong>list</strong> page</p>
+<main class="d-flex flex-column min-vh-100 flex-shrink-0">
+  <div class="container my-5">
+    {{- partial "header" . -}}
+  </div>
+
   {{ .Content }}
+
 </main>
 {{ end }}
