--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,25 +1,10 @@
 {{ define "main" }}
 <main class="d-flex flex-column min-vh-100 flex-shrink-0">
   <div class="container my-5">
-    <div class="text-center mb-5">
-      <h2 class="text-uppercase">{{ .Title }}</h2>
-      <hr class="short-hr">
-      <div class="row justify-content-center">
-        <div class="col-lg-8">
-          <p>{{ .Params.subtitle }}</p>
-          {{ if .Params.button }}
-          {{ range .Params.button }}
-          <a class="btn btn-primary" href="{{ .link }}"{{ with .download }} download=""  target="_blank"{{ end }}>{{ .linkText }}</a>
-          {{ end }}
-          {{ end }}
-        </div>
-      </div>
-    </div>
-
-    <hr>
-
-    {{ .Content }}
-    
+    {{- partial "header" . -}}
   </div>
+
+  {{ .Content }}
+
 </main>
 {{ end }}
