--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,24 +1,14 @@
-<header>
-	<nav class="navbar navbar-expand-lg border-bottom">
-		<div class="container p-2">
-		<a class="navbar-brand" href="/">
-				<img src="/img/unhcr_logo_blue.svg" alt="UNHCR Logo" class="img-fluid" style="height: 3rem; max-height:2.75rem">
-		</a>
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarText">
-			<ul class="navbar-nav ms-auto">
-				{{ range .Site.Menus.main }}
-        <li class="nav-item">
-            <a class="nav-link{{ if $.IsMenuCurrent "main" . }} active" aria-current="page{{ end }}" href="{{ .URL }}">
-                {{ .Pre }}
-                <span>{{ .Name }}</span>
-            </a>
-        </li>
-    		{{ end }}
-			</ul>
-		</div>
-		</div>
-	</nav>
-</header>
+<div class="text-center mb-5">
+  <h2 class="text-uppercase">{{ .Title }}</h2>
+  <hr class="short-hr">
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
+      <p>{{ .Params.subtitle | safeHTML }}</p>
+      {{ if .Params.button }}
+      {{ range .Params.button }}
+      <a class="btn btn-primary" href="{{ .link }}"{{ with .download }} download=""  target="_blank"{{ end }}>{{ .linkText }}</a>
+      {{ end }}
+      {{ end }}
+    </div>
+  </div>
+</div>
